<resources>
    <string name="app_name">Notifyme </string>

    <string name="btnSavePrfl">Salvar</string>
    <string name="btnUserPrfl">Ver Usuarios</string>
    <string name="editTextNome">Nome</string>
    <string name="editTextSenha">Senha</string>
    <string name="editTextEmail">Email</string>

    <string name="cadUser_btnCad">CADASTRAR</string>
    <string name="cadUser_btnCanc">cancelar</string>
    <string name="cadUser_titulo">Cadastra Usuário</string>

    <!--strings da tela activity main-->
    <string name="login_titulo">LOGIN</string>
    <string name="login_email">E-mail</string>
    <string name="login_pwd">Senha</string>
    <string name="login_cpwd">Confirmar senha</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_cadastro">Cadastre-se</string>

    <string name="nomeLogin">Digite seu login</string>
    <string name="emailLogin">Digite seu email</string>
    <string name="senhaLogin">Digite sua senha</string>
    <string name="btnLoginEntrar">Entrar</string>
    <string name="btnLoginCadastrar">Cadastrar-se</string>

    <!--strings da tela activity cadastrar nota-->
    <string name="tituloNota">Insira o titulo</string>
    <string name="descricaoNota">Insira a descrição</string>
    <string name="btnSalvarNota">Salvar Nota</string>

    <!--strings tela activity menu inicial-->
    <string name="btnCadastrarUsuario">Cadastrar Usuario</string>
    <string name="btnEditarNota">Editar Notas</string>
    <string name="btnCadastrarNota">Cadastrar Notas</string>
    <string name="btnLocalizacao">Localização IFRS</string>

    <!--activity editar nota-->
    <string name="editTextTituloNota">Editar Titulo</string>
    <string name="editTextDescricaoNota">Editar Descricao</string>
    <string name="btnEdicaoNota">Editar Nota</string>

    <!--activity linha-->
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="title_activity_pagina_inicial">PaginaInicialActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_page_inicial">Pagina Inicial</string>
    <string name="action_add_user">Cadastrar User</string>
    <string name="action_add_evento">Cadastrar Event</string>
    <string name="action_sobre">Sobre o APP</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Excluir</string>
    <string name="action_list_users">Listar Usuários</string>
    <string name="action_list_eventos">Listar Eventos</string>
    <string name="action_list_eventos_card">Listar Eventos Card</string>

    <string name="action_list_notas">Listar Notas</string>

    <string name="action_exit">Sair</string>
    <string name="action_imagem">Upload</string>


    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="btn_entrar">Entrar</string>

    <!--activity pagina cadastro evento-->
    <string name="txtCadastro_evento">Cadastro de eventos</string>
    <string name="titulo_evento">Titulo Evento</string>
    <string name="descricao_evento">Descrição Evento</string>
    <string name="local_evento">Local Evento</string>
    <string name="horario_evento">Horário Evento</string>
    <string name="data_evento">Data Evento</string>





    <!--activity atualizar evento-->
    <string name="textoRecebidoTitulo">Titulo</string>
    <string name="textoRecebidoDescricao">Descricão</string>
    <string name="textoRecebidoLocal">Local</string>
    <string name="textoRecebidoHorario">Horário</string>
    <string name="textoRecebidoData">Data</string>


    <!--pagina_inicial.xml-->
    <string name="action_search">Pesquisar</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_sair">Sair</string>

    <!--activity linha-->
    <string name="linhaTitulo">Titulo Evento</string>
    <string name="linhaDescricao">Descrição Evento</string>
    <string name="linhaLocal">Local Evento</string>
    <string name="linhaData">Data Evento</string>
    <string name="linhaHorario">Horario Evento</string>

    <!--activity cards-->
    <string name="card_title">Titulo Evento</string>
    <string name="action_list_evento_card"> Lista Card</string>
    <string name="deletar_card">Deletar</string>

    <!--layout adapter list-->
    <string name="textViewTituloEvento">Titulo evento</string>
    <string name="textViewDescricaoEvento">Descricao Evento</string>
    <string name="textViewLocalEvento">Local Evento</string>
    <string name="textViewHorarioEvento">Horario Evento</string>
    <string name="textViewDataEvento">Data Evento</string>

    <string name="deletar">Deletar</string>

    <string name="versao_app">Versão</string>

</resources>