<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:id="@+id/nav_add_user"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_user" />
        <item
            android:id="@+id/nav_add_eventos"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/action_add_evento" />
        <item
            android:id="@+id/nav_listUser"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/action_list_users" />
        <item
            android:id="@+id/nav_listEventos"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/action_list_eventos" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_exit" />
        </menu>
    </item>

</menu>
